src/NKnife.TDMS/Externals/nilibddc.h

   typedef DDCFile*               DDCFileHandle;
   typedef DDCChannelGroup*         DDCChannelGroupHandle;
   typedef DDCChannel*               DDCChannelHandle;
   //*****************************************************************************
   /// <- Miscellaneous
   //*****************************************************************************

   //*****************************************************************************
   /// -> Separate type-safe functions for non-C users
   //*****************************************************************************
   int __stdcall DDC_SetDataValuesUInt8(DDCChannelHandle channel,
      unsigned char values[],
      size_t numValues);
   int __stdcall DDC_SetDataValuesInt16(DDCChannelHandle channel,
      short values[],
      size_t numValues);
   int __stdcall DDC_SetDataValuesInt32(DDCChannelHandle channel,
      long values[],
      size_t numValues);
   int __stdcall DDC_SetDataValuesFloat(DDCChannelHandle channel,
      float values[],
      size_t numValues);
   int __stdcall DDC_SetDataValuesDouble(DDCChannelHandle channel,
      double values[],
      size_t numValues);
   int __stdcall DDC_SetDataValuesString(DDCChannelHandle channel,
      const char *values[],
      size_t numValues);
   int __stdcall DDC_AppendDataValuesUInt8(DDCChannelHandle channel,
      unsigned char values[],
      size_t numValues);
   int __stdcall DDC_AppendDataValuesInt16(DDCChannelHandle channel,
      short values[],
      size_t numValues);
   int __stdcall DDC_AppendDataValuesInt32(DDCChannelHandle channel,
      long values[],
      size_t numValues);
   int __stdcall DDC_AppendDataValuesFloat(DDCChannelHandle channel,
      float values[],
      size_t numValues);
   int __stdcall DDC_AppendDataValuesDouble(DDCChannelHandle channel,
      double values[],
      size_t numValues);
   int __stdcall DDC_AppendDataValuesString(DDCChannelHandle channel,
      const char *values[],
      size_t numValues);
   int __stdcall DDC_ReplaceDataValuesUInt8(DDCChannelHandle channel,
      size_t indexOfFirstValueToReplace,
      unsigned char values[],
      size_t numValues);
   int __stdcall DDC_ReplaceDataValuesInt16(DDCChannelHandle channel,
      size_t indexOfFirstValueToReplace,
      short values[],
      size_t numValues);
   int __stdcall DDC_ReplaceDataValuesInt32(DDCChannelHandle channel,
      size_t indexOfFirstValueToReplace,
      long values[],
      size_t numValues);
   int __stdcall DDC_ReplaceDataValuesFloat(DDCChannelHandle channel,
      size_t indexOfFirstValueToReplace,
      float values[],
      size_t numValues);
   int __stdcall DDC_ReplaceDataValuesDouble(DDCChannelHandle channel,
      size_t indexOfFirstValueToReplace,
      double values[],
      size_t numValues);
   int __stdcall DDC_ReplaceDataValuesString(DDCChannelHandle channel,
      size_t indexOfFirstValueToReplace,
      const char *values[],
      size_t numValues);
   int __stdcall DDC_GetDataValuesUInt8(DDCChannelHandle channel,
      size_t indexOfFirstValueToGet,
      size_t numValuesToGet,
      unsigned char values[]);
   int __stdcall DDC_GetDataValuesInt16(DDCChannelHandle channel,
      size_t indexOfFirstValueToGet,
      size_t numValuesToGet,
      short values[]);
   int __stdcall DDC_GetDataValuesInt32(DDCChannelHandle channel,
      size_t indexOfFirstValueToGet,
      size_t numValuesToGet,
      long values[]);
   int __stdcall DDC_GetDataValuesFloat(DDCChannelHandle channel,
      size_t indexOfFirstValueToGet,
      size_t numValuesToGet,
      float values[]);
   int __stdcall DDC_GetDataValuesDouble(DDCChannelHandle channel,
      size_t indexOfFirstValueToGet,
      size_t numValuesToGet,
      double values[]);
   int __stdcall DDC_GetDataValuesString(DDCChannelHandle channel,
      size_t indexOfFirstValueToGet,
      size_t numValuesToGet,
      char *values[]);
   int __stdcall DDC_CreateFilePropertyUInt8(DDCFileHandle file,
      const char *property,
      unsigned char value);
   int __stdcall DDC_CreateFilePropertyInt16(DDCFileHandle file,
      const char *property,
      short value);
   int __stdcall DDC_CreateFilePropertyInt32(DDCFileHandle file,
      const char *property,
      long value);
   int __stdcall DDC_CreateFilePropertyFloat(DDCFileHandle file,
      const char *property,
      float value);
   int __stdcall DDC_CreateFilePropertyDouble(DDCFileHandle file,
      const char *property,
      double value);
   int __stdcall DDC_CreateFilePropertyString(DDCFileHandle file,
      const char *property,
      const char *value);
   int __stdcall DDC_SetFilePropertyUInt8(DDCFileHandle file,
      const char* property,
      unsigned char value);
   int __stdcall DDC_SetFilePropertyInt16(DDCFileHandle file,
      const char* property,
      short value);
   int __stdcall DDC_SetFilePropertyInt32(DDCFileHandle file,
      const char* property,
      long value);
   int __stdcall DDC_SetFilePropertyFloat(DDCFileHandle file,
      const char* property,
      float value);
   int __stdcall DDC_SetFilePropertyDouble(DDCFileHandle file,
      const char* property,
      double value);
   int __stdcall DDC_SetFilePropertyString(DDCFileHandle file,
      const char* property,
      const char *value);
   int __stdcall DDC_GetFilePropertyUInt8(DDCFileHandle file,
      const char* property,
      unsigned char* value);
   int __stdcall DDC_GetFilePropertyInt16(DDCFileHandle file,
      const char* property,
      short* value);
   int __stdcall DDC_GetFilePropertyInt32(DDCFileHandle file,
      const char* property,
      long* value);
   int __stdcall DDC_GetFilePropertyFloat(DDCFileHandle file,
      const char* property,
      float* value);
   int __stdcall DDC_GetFilePropertyDouble(DDCFileHandle file,
      const char* property,
      double* value);
   int __stdcall DDC_GetFilePropertyString(DDCFileHandle file,
      const char* property,
      char value[],
      size_t valueSize);
   int __stdcall DDC_CreateChannelGroupPropertyUInt8(DDCChannelGroupHandle channelGroup,
      const char *property,
      unsigned char value);
   int __stdcall DDC_CreateChannelGroupPropertyInt16(DDCChannelGroupHandle channelGroup,
      const char *property,
      short value);
   int __stdcall DDC_CreateChannelGroupPropertyInt32(DDCChannelGroupHandle channelGroup,
      const char *property,
      long value);
   int __stdcall DDC_CreateChannelGroupPropertyFloat(DDCChannelGroupHandle channelGroup,
      const char *property,
      float value);
   int __stdcall DDC_CreateChannelGroupPropertyDouble(DDCChannelGroupHandle channelGroup,
      const char *property,
      double value);
   int __stdcall DDC_CreateChannelGroupPropertyString(DDCChannelGroupHandle channelGroup,
      const char *property,
      const char *value);
   int __stdcall DDC_SetChannelGroupPropertyUInt8(DDCChannelGroupHandle channelGroup,
      const char* property,
      unsigned char value);
   int __stdcall DDC_SetChannelGroupPropertyInt16(DDCChannelGroupHandle channelGroup,
      const char* property,
      short value);
   int __stdcall DDC_SetChannelGroupPropertyInt32(DDCChannelGroupHandle channelGroup,
      const char* property,
      long value);
   int __stdcall DDC_SetChannelGroupPropertyFloat(DDCChannelGroupHandle channelGroup,
      const char* property,
      float value);
   int __stdcall DDC_SetChannelGroupPropertyDouble(DDCChannelGroupHandle channelGroup,
      const char* property,
      double value);
   int __stdcall DDC_SetChannelGroupPropertyString(DDCChannelGroupHandle channelGroup,
      const char* property,
      const char *value);
   int __stdcall DDC_GetChannelGroupPropertyUInt8(DDCChannelGroupHandle channelGroup,
      const char* property,
      unsigned char *value);
   int __stdcall DDC_GetChannelGroupPropertyInt16(DDCChannelGroupHandle channelGroup,
      const char* property,
      short *value);
   int __stdcall DDC_GetChannelGroupPropertyInt32(DDCChannelGroupHandle channelGroup,
      const char* property,
      long *value);
   int __stdcall DDC_GetChannelGroupPropertyFloat(DDCChannelGroupHandle channelGroup,
      const char* property,
      float *value);
   int __stdcall DDC_GetChannelGroupPropertyDouble(DDCChannelGroupHandle channelGroup,
      const char* property,
      double *value);
   int __stdcall DDC_GetChannelGroupPropertyString(DDCChannelGroupHandle channelGroup,
      const char* property,
      char value[],
      size_t valueSize);